--- a/ajaxTest.html
+++ b/ajaxTest.html
@@ -58,26 +58,26 @@
 
     <ul id="searchList">
         <li><span id="s1"></span><span id="s2"></span><span id="s3"></span><span id="s4"></span></li>
-        <li><span class="number"></span><a class="songName" href=""></a><a class="artist" href=""></a><a class="album"
-                href=""></a></li>
-        <li><span class="number"></span><a class="songName" href=""></a><a class="artist" href=""></a><a class="album"
-                href=""></a></li>
-        <li><span class="number"></span><a class="songName" href=""></a><a class="artist" href=""></a><a class="album"
-                href=""></a></li>
-        <li><span class="number"></span><a class="songName" href=""></a><a class="artist" href=""></a><a class="album"
-                href=""></a></li>
-        <li><span class="number"></span><a class="songName" href=""></a><a class="artist" href=""></a><a class="album"
-                href=""></a></li>
-        <li><span class="number"></span><a class="songName" href=""></a><a class="artist" href=""></a><a class="album"
-                href=""></a></li>
-        <li><span class="number"></span><a class="songName" href=""></a><a class="artist" href=""></a><a class="album"
-                href=""></a></li>
-        <li><span class="number"></span><a class="songName" href=""></a><a class="artist" href=""></a><a class="album"
-                href=""></a></li>
-        <li><span class="number"></span><a class="songName" href=""></a><a class="artist" href=""></a><a class="album"
-                href=""></a></li>
-        <li><span class="number"></span><a class="songName" href=""></a><a class="artist" href=""></a><a class="album"
-                href=""></a></li>
+        <li><span class="number"></span><a class="songName" href="#"></a><a class="artist" href="#"></a><a
+                class="album1" href="#"></a></li>
+        <li><span class="number"></span><a class="songName" href="#"></a><a class="artist" href="#"></a><a
+                class="album1" href="#"></a></li>
+        <li><span class="number"></span><a class="songName" href="#"></a><a class="artist" href="#"></a><a class="album"
+                href="#"></a></li>
+        <li><span class="number"></span><a class="songName" href="#"></a><a class="artist" href="#"></a><a class="album"
+                href="#"></a></li>
+        <li><span class="number"></span><a class="songName" href="#"></a><a class="artist" href="#"></a><a
+                class="album1" href="#"></a></li>
+        <li><span class="number"></span><a class="songName" href="#"></a><a class="artist" href="#"></a><a
+                class="album1" href="#"></a></li>
+        <li><span class="number"></span><a class="songName" href="#"></a><a class="artist" href="#"></a><a
+                class="album2" href="#"></a></li>
+        <li><span class="number"></span><a class="songName" href="#"></a><a class="artist" href="#"></a><a class="album"
+                href="#"></a></li>
+        <li><span class="number"></span><a class="songName" href="#"></a><a class="artist" href="#"></a><a class="album"
+                href="#"></a></li>
+        <li><span class="number"></span><a class="songName" href="#"></a><a class="artist" href="#"></a><a
+                class="album10" href="#"></a></li>
     </ul>
     <script src="./js/ajax.js"></script>
 </body>
