--- a/ajaxTest.html
+++ b/ajaxTest.html
@@ -79,7 +79,7 @@
         <li><span class="number"></span><a class="songName" href="#"></a><a class="artist" href="#"></a><a
                 class="album10" href="#"></a></li>
     </ul>
-    <script src="./js/ajax.js"></script>
+    <script src="./js/lv4.js"></script>
 </body>
 
 </html>
